--- a/index.html
+++ b/index.html
@@ -4,9 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Voiedilo Vadym</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div class="content__container">
+        <header class="about">
+            <div class="about__container">
+                <h1 class="about__header">Vadym Voiedilo</h1>
+                <p class="about__shortdescription">FRONTEND DEVELOPER | LVIV</p>
+                <p class="about__longdescription">I’m a goal-oriented, creative and self-motivated web developer 
+                specializing in front-end. 
+                I am well familiar with CSS/HTML, JS, cross-browser and adaptive markup skills.
+                Eager to improve my skills, always try to learn new technologies and stay up-to-date with Web development trends. 
+                I also learn quickly and easily communicate with people</p>
+            </div>
+            <img class="about__foto" src="image/foto.jpg" alt="Vadym" width="114" height="114">
+        </header>
+        <main class="main">
+            <section class="contact section">
+              <div class="contact__container">
+                <a href="tel:+380982752801" class="contact__link">+380982752801</a>
+                <a href="mailto:ASD4S.Profile@gmail.com" class="contact__link">asd4s.profile@gmail.com</a>
+                <a href="https://t.me/ASDA7o" class="contact__link">Telegram</a>
+              </div>
+            </section>
+            <section class="experience section">
+              <div class="section__container">
+                <div class="name">
+                  <h2 class="section__name">Experience</h2>
+                </div>
+                <div class="section__description">
+                  <div>
+                    <h3 class="description__header"><b></b></h3>
+                    <p class="description__block"><b></b> </p>
+                    <p class="description__block"><b></b></p>
+                    <p class="description__block"><b></b></p>
+                  </div>
+                  <div>
+                    <h3 class="description__header"><b></b></h3>
+                    <p class="description__block"><b></b></p>
+                    <p class="description__block"><b></b></p>
+                    <p class="description__block"><b></b></p>
+                  </div>
+                </div>
+              </div>  
+            </section>
+            <section class="education section">
+              <div class="section__container">
+                <div class="name">
+                  <h2 class="section__name">Education</h2>
+                </div>
+                <div class="section__description">
+                  <div>
+                    <h3 class="description__header"><b>Ukrainian Academy of Printing | 2017 - 2021</b></h3>
+                    <p class="description__block">Bachelor degree in Automation and computer-integrated technologies</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section class="skills section">
+              <div class="section__container">
+                <div class="name">
+                  <h2 class="section__name">Skills</h2>
+                </div>
+                <div class="section__description description__section">
+                  <div>
+                    <p class="description__block">HTML5</p>
+                    <p class="description__block">CSS3</p>
+
+                  </div>
+                  <div>
+                    <p class="description__block">BEM</p>
+                    <p class="description__block">Javascript</p>
+
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section class="tools section">
+              <div class="section__container last__section">
+                <div class="name">
+                  <h2 class="section__name">Tools</h2>
+                </div>
+                <div class="section__description description__section ">
+                  <div>
+                    <p class="description__block">Figma</p>
+                    <p class="description__block">GIT</p>
+
+                  </div>
+                  <div>
+                    <p class="description__block">ESLint</p>
+                    <p class="description__block">VSCode</p>
+
+                  </div>
+                </div>
+              </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
